# FederatedLearning

./: .gitignore  README.md  requirments.txt
MininetFederatedLearning/: Dockerfile  Dockerfile-BG  Dockerfile-FL  FlowerClient.py  FlowerServer.py  federated_learning_topo.py  main.py  mininet-wifi-topo.py  mininet_topo.py  network_stats.sh  plot_cumulative_bar_plot.py  plot_link_capacities.py  plot_loss_vs_time.py  plot_max_tail_latency_multiple_files.py  plot_network_logs.py  plot_overhead.py  plot_overhead2.py  plot_queues.py  plot_round_time.py  plot_tail_latency.py  plot_traffic_monitor.py  prepare_dataset.py  requirement.txt  scaled_mininet_topo.py
MininetFederatedLearning/experiments_code/: Dockerfile-BG  Dockerfile-FL  FlowerClient.py  FlowerServer.py  background_generation1.py  links.yaml  main.py  monitor_netem.sh  my_server_class.py  plotter.py  prepare_dataset.py  pyproject.toml  requirements.txt  run_and_monitor_exp.py  start_iperf.sh  topohub_bg_gen.py  topohub_topology.py  topology.py
MininetFederatedLearning/experiments_code/fedlearning/: FlowerClient.py  FlowerServer.py  my_server_class.py  task.py
MininetFederatedLearning/experimentscode/: Dockerfile-BG  Dockerfile-FL  docker_clients.py  local_client.sh  main.py  network_stats.sh  prepare_dataset.py  pyproject.toml  requirements.txt  run_and_monitor_exp.py  settings.toml  start_iperf.py  start_iperf.sh  topohub_bg_gen.py  topohub_topology.py  traffic_monitor.py
MininetFederatedLearning/experimentscode/fedlearning/: FlowerClient.py  FlowerServer.py  my_server_class.py  task.py
flow-scheduling/: app.xml  features.xml  pom.xml
flow-scheduling/src/main/java/edu/uta/flowsched/: AppCommand.java  AppComponent.java  ClientInformationDatabase.java  FLHost.java  FederatedLearningFlowOptimizer.java  GoogleOR2.java  GoogleORPathFinder.java  Greedy2.java  GreedyFlowScheduler.java  InitialFlowSetup.java  LinkInformationDatabase.java  LinkLatencyProbeComponent.java  MyLink.java  MyLinkDeepCopy.java  MyPath.java  MyPathDeepCopy.java  Nd4jNativeLoader.java  OrToolsLoader.java  PathFinder.java  PathInformationDatabase.java  PathRulesInstaller.java  ReserveCapacity.java  Services.java  SetupPath.java  SimMyPath.java  TotalLoadComparator.java  Util.java  ZeroMQServer.java
flow-scheduling/src/main/java/edu/uta/flowsched/schedulers/: CONFIGS.java  DrlSmartFlowV1.java  DrlSmartFlowV2.java  DrlSmartFlowV3.java  GreedyFlowScheduler.java  GreedySmartFlow.java  GrokOptimizedScheduler.java  HybridCapacityScheduler.java  HybridCapacityScheduler2.java  OptimizedScheduler.java  PlainFreeCapacityScheduler.java  ProcessingContext.java  (+1 more)
(+1 files in other folders)
