[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "federatedlearning"
version = "1.0.0"
description = ""
license = "Apache-2.0"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "osama"

[tool.flwr.app.components]
serverapp = "fedlearning.FlowerServer:app"
clientapp = "fedlearning.FlowerClient:app"

[tool.flwr.app.config]
rounds = 5
fraction-fit = 1
local-epochs = 1
batch-size = 32
clients = 5
dataset = "cifar10"
log = "logs/local"
zmq = false
fl-server-address = "10.0.0.250"
onos = "11.66.33.46"

[tool.flwr.federations]
default = "local"

[tool.flwr.federations.docker]
address = "172.17.0.17:9093"
insecure = true

[tool.flwr.federations.local]
address = "127.0.0.1:9093"
insecure = true
