[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "federatedlearning"
version = "1.0.0"
description = ""
license = "Apache-2.0"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "osama"

[tool.flwr.app.components]
serverapp = "fedlearning.FlowerServer:app"
clientapp = "fedlearning.FlowerClient:app"

[tool.flwr.app.config]
rounds = 10
fraction-fit = 1
local-epochs = 1
batch-size = 32
clients = 10
dataset = "cifar10"
log = "logs"
zmq = true
fl-server-address = "10.0.0.250"
onos = ""
stop-by-accuracy=false
accuracy-level=0.8

[tool.flwr.federations]
default = "docker"

[tool.flwr.federations.docker]
address = "172.17.0.27:9093"
insecure = true

[tool.flwr.federations.local]
address = "127.0.0.1:9093"
insecure = true
